--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -65,11 +64,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  
+
   a:hover {
     color: #747bff;
   }
-  
+
   button {
     background-color: #f9f9f9;
   }
@@ -91,4 +90,14 @@ button:focus-visible {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+#root > div > header > div > form > input {
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  color: #fff;
 }
